[package]
name = "hyper-lib"
version = "0.1.0"
edition = "2021"
description = """
Supporting library for hyperion: a discrete time network event simulator for Bitcoin
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphrs = {version = "0.9.0", optional = true }
hashbrown = "0.15"
itertools = "0.13.0"
log = "0.4.20"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0.0"

[features]
graph = ["dep:graphrs"]