[package]
name = "hyperion"
version = "0.1.0"
edition = "2021"
description = """
A discrete time network event simulator for Bitcoin
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-lib = { path = "../hyper-lib" }

anyhow = { version = "1.0.69", features = ["backtrace"] }
clap = { version = "4.1.6", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
csv = "1.3.1"
home = "0.5.9"
indicatif = "0.17.8"
log = "0.4.20"
simple_logger = "5.0.0"